vsphere/7.0/docs/README.md
> [!NOTE]
> - To download the zip files below, first click each file link to enter the raw view of the file, then click the "Download Raw File" button at the top right of the page. Right-clicking and choosing "Save as..." produces corrupt zip file downloads in many browsers.

# VMware vSphere 7 STIG Documentation

## Overview
In the United States Department of Defense (DOD), Security Technical Implementation Guides (STIGs) provide technical, standards-based hardening guidance. Officially published STIGs are mandatory in the DOD and fill a crucial role in systems accreditation as part of the Risk Management Framework (RMF). VMware has worked with the Defense Information Systems Agency (DISA) to publish many STIGs over the years and will continue to do so. Until VMware vSphere STIG content is officially published by DISA we want to make our submitted content available to the community. More information is available in the overview document provided in the download.

The only official reference for DISA STIGs, once approved and published, is the US Department of Defense web site at https://public.cyber.mil/stigs/

## Intended Audience
The audience for the VMware vSphere 7 STIG and/or STIG Readiness Guides is VMware vSphere 7 customers in the DOD needing to harden and accredit their vSphere environments. Other entities can use this guidance, however there are items that are specific to the DOD that will not be applicable to a non-DOD environment. VMware maintains recommended vSphere 7 security hardening baselines that may be more generally applicable to non-DOD environments.

There are many engineered data center & hybrid cloud infrastructure products that also work with and host vSphere deployments, such as Dell VxRail and HPE SimpliVity. If this is how you consume vSphere, you should check with your product’s support for guidance first before implementing any hardening.

## Contents
- Overview document
- Revision history
- One or more XML files using the [XCCDF](https://csrc.nist.gov/Projects/Security-Content-Automation-Protocol/Specifications/xccdf) schema.
- Any supplemental files or documents

## Support and Compatibility
Compatibility information is made available [here](../README.md#compatibility).

For information on support for STIGs see: https://knowledge.broadcom.com/external/article?legacyId=94398

> [!NOTE]
> - The latest release always takes precedence over prior releases. Older releases are provided for historical purposes and if support and compatibility are not available for an older product version. 


## Content
|      Version      |        Type        |     Release Date   |      Download      |
|:-----------------:|:------------------:|:------------------:|:------------------:|
|     `V1R1`        |    Official STIG   |     2023/03/15     |[U_VMW_vSphere_7-0_Y23M03_STIG.zip](U_VMW_vSphere_7-0_Y23M03_STIG.zip)|
|     `V1R2`        |    Official STIG   |     2023/07/26     |[U_VMW_vSphere_7-0_Y23M07_STIG.zip](U_VMW_vSphere_7-0_Y23M07_STIG.zip)|
|     `V1R3`        |    Official STIG   |     2024/01/22     |[U_VMW_vSphere_7-0_Y24M01_STIG.zip](U_VMW_vSphere_7-0_Y25M01_STIG.zip)|
|     `V1R4`        |    Official STIG   |     2024/01/22     |[U_VMW_vSphere_7-0_Y25M04_STIG.zip](https://dl.dod.cyber.mil/wp-content/uploads/stigs/zip/U_VMW_vSphere_7-0_Y25M04_STIG.zip)|


## Viewing
The XML files provided can be loaded into and viewed in [STIG Viewer](https://public.cyber.mil/stigs/stig-viewing-tools/).  

## Known Issues
Any known issues will be documented in the [known-issues.md](known-issues.md) document.  
